-Treatment: added eventDialog, progress bar, fixed timer, fixed minor design issues -Calendar events: issue #14 fix (added circle on background for dates with events and today(different circles)) -issue #6 fixed, issue #9 fixed

--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -5,6 +5,7 @@
     android:fitsSystemWindows="true"
     tools:context="vladislavsignatjevs.renaldyalisys.CalendarEvents"
     android:orientation="vertical"
+    android:background="@color/white"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
